Prevent horizontal scrolling on page when content is overflown

--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -12,7 +12,7 @@ scrollbar-width: none;
 
 body {
   margin: 0;
-
+  overflow-x: hidden; 
 }
 
 * {
@@ -326,3 +326,5 @@ opacity: 0.5,
     transform: scale(1);
   }
 }
+
+
